--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -1,69 +1,42 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <title></title>
-  <meta name="Generator" content="Cocoa HTML Writer">
-  <meta name="CocoaVersion" content="1894.3">
-  <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 20.0px; font: 12.0px Menlo; color: #1b1f22; -webkit-text-stroke: #1b1f22}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 20.0px; font: 12.0px Menlo; color: #1b1f22; -webkit-text-stroke: #1b1f22; min-height: 14.0px}
-    span.s1 {font-kerning: none}
-    table.t1 {background-color: #ffffff; border-collapse: collapse}
-    td.td1 {width: 50.0px; padding: 0.0px 10.0px 0.0px 10.0px}
-  </style>
-</head>
-<body>
-<table cellspacing="0" cellpadding="0" class="t1">
-  <tbody>
-    <tr>
-      <td valign="top" class="td1">
-        <p class="p1"><span class="s1">---</span></p>
-        <p class="p1"><span class="s1">layout: archive</span></p>
-        <p class="p1"><span class="s1">---</span></p>
-        <p class="p2"><span class="s1"></span><br></p>
-        <p class="p1"><span class="s1">{{ content }}</span></p>
-        <p class="p2"><span class="s1"></span><br></p>
-        <p class="p1"><span class="s1">{% assign categories_max = 0 %}</span></p>
-        <p class="p1"><span class="s1">{% for category in site.categories %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{% if category[1].size &gt; categories_max %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>{% assign categories_max = category[1].size %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{% endif %}</span></p>
-        <p class="p1"><span class="s1">{% endfor %}</span></p>
-        <p class="p2"><span class="s1"></span><br></p>
-        <p class="p1"><span class="s1">&lt;ul class="taxonomy__index"&gt;</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{% for i in (1..categories_max) reversed %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>{% for category in site.categories %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{% if category[1].size == i %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;li&gt;</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;a href="#{{ category[0] | slugify }}"&gt;</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;strong&gt;{{ category[0] }}&lt;/strong&gt; &lt;span class="taxonomy__count"&gt;{{ i }}&lt;/span&gt;</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;/a&gt;</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;/li&gt;</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{% endif %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>{% endfor %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{% endfor %}</span></p>
-        <p class="p1"><span class="s1">&lt;/ul&gt;</span></p>
-        <p class="p2"><span class="s1"></span><br></p>
-        <p class="p1"><span class="s1">{% for i in (1..categories_max) reversed %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{% for category in site.categories %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>{% if category[1].size == i %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section"&gt;</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;h2 class="archive__subtitle"&gt;{{ category[0] }}&lt;/h2&gt;</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;div class="entries-{{ page.entries_layout | default: 'list' }}"&gt;</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>{% for post in category.last %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>{% include archive-single.html type=page.entries_layout %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>{% endfor %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;/div&gt;</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;a href="#page-title" class="back-to-top"&gt;{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &amp;uarr;&lt;/a&gt;</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/section&gt;</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>{% endif %}</span></p>
-        <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{% endfor %}</span></p>
-        <p class="p1"><span class="s1">{% endfor %}</span></p>
-      </td>
-    </tr>
-  </tbody>
-</table>
-</body>
-</html>
+---
+layout: archive
+---
+
+{{ content }}
+
+{% assign categories_max = 0 %}
+{% for category in site.categories %}
+  {% if category[1].size > categories_max %}
+    {% assign categories_max = category[1].size %}
+  {% endif %}
+{% endfor %}
+
+<ul class="taxonomy__index">
+  {% for i in (1..categories_max) reversed %}
+    {% for category in site.categories %}
+      {% if category[1].size == i %}
+        <li>
+          <a href="#{{ category[0] | slugify }}">
+            <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
+          </a>
+        </li>
+      {% endif %}
+    {% endfor %}
+  {% endfor %}
+</ul>
+
+{% for i in (1..categories_max) reversed %}
+  {% for category in site.categories %}
+    {% if category[1].size == i %}
+      <section id="{{ category[0] | slugify | downcase }}" class="taxonomy__section">
+        <h2 class="archive__subtitle">{{ category[0] }}</h2>
+        <div class="entries-{{ page.entries_layout | default: 'list' }}">
+          {% for post in category.last %}
+            {% include archive-single.html type=page.entries_layout %}
+          {% endfor %}
+        </div>
+        <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
+      </section>
+    {% endif %}
+  {% endfor %}
+{% endfor %}
