--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -1,32 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <title></title>
-  <meta name="Generator" content="Cocoa HTML Writer">
-  <meta name="CocoaVersion" content="1894.3">
-  <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
-    span.s1 {font-kerning: none}
-  </style>
-</head>
-<body>
-<p class="p1"><span class="s1">{% assign words_per_minute = site.words_per_minute | default: 200 %}</span></p>
-<p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1">{% if post.read_time %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{% assign words = post.content | strip_html | number_of_words %}</span></p>
-<p class="p1"><span class="s1">{% elsif page.read_time %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{% assign words = page.content | strip_html | number_of_words %}</span></p>
-<p class="p1"><span class="s1">{% endif %}</span></p>
-<p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1">{% if words &lt; words_per_minute %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{{ site.data.ui-text[site.locale].less_than | default: "less than" }} 1 {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}</span></p>
-<p class="p1"><span class="s1">{% elsif words == words_per_minute %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>1 {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}</span></p>
-<p class="p1"><span class="s1">{% else %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{{ words | divided_by:words_per_minute }} {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}</span></p>
-<p class="p1"><span class="s1">{% endif %}</span></p>
-</body>
-</html>
+{% assign words_per_minute = site.words_per_minute | default: 200 %}
+
+{% if post.read_time %}
+  {% assign words = post.content | strip_html | number_of_words %}
+{% elsif page.read_time %}
+  {% assign words = page.content | strip_html | number_of_words %}
+{% endif %}
+
+{% if words < words_per_minute %}
+  {{ site.data.ui-text[site.locale].less_than | default: "less than" }} 1 {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}
+{% elsif words == words_per_minute %}
+  1 {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}
+{% else %}
+  {{ words | divided_by:words_per_minute }} {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}
+{% endif %}
