--- a/_includes/search/google-search-scripts.html
+++ b/_includes/search/google-search-scripts.html
@@ -1,47 +1,30 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <title></title>
-  <meta name="Generator" content="Cocoa HTML Writer">
-  <meta name="CocoaVersion" content="1894.3">
-  <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
-    span.s1 {font-kerning: none}
-  </style>
-</head>
-<body>
-<p class="p1"><span class="s1">&lt;script&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>(function () {</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>var cx = '{{ site.google.search_engine_id }}';</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>var gcse = document.createElement('script');</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>gcse.type = 'text/javascript';</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>gcse.async = true;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>var s = document.getElementsByTagName('script')[0];</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>s.parentNode.insertBefore(gcse, s);</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>})();</span></p>
-<p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>function googleCustomSearchExecute() {</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>var input = document.getElementById('cse-search-input-box-id');</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>var element = google.search.cse.element.getElement('searchresults-only0');</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>if (input.value == '') {</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>element.clearAllResults();</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>} else {</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>element.execute(input.value);</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>return false;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>}</span></p>
-<p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{% if site.google.instant_search %}</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$(document).ready(function () {</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>$('input#cse-search-input-box-id').on('keyup', function () {</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>googleCustomSearchExecute();</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>});</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>});</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>{% endif %}</span></p>
-<p class="p1"><span class="s1">&lt;/script&gt;</span></p>
-</body>
-</html>
+<script>
+  (function () {
+    var cx = '{{ site.google.search_engine_id }}';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+
+  function googleCustomSearchExecute() {
+    var input = document.getElementById('cse-search-input-box-id');
+    var element = google.search.cse.element.getElement('searchresults-only0');
+    if (input.value == '') {
+      element.clearAllResults();
+    } else {
+      element.execute(input.value);
+    }
+    return false;
+  }
+
+  {% if site.google.instant_search %}
+    $(document).ready(function () {
+      $('input#cse-search-input-box-id').on('keyup', function () {
+        googleCustomSearchExecute();
+      });
+    });
+  {% endif %}
+</script>
